<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/quePaper"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/quePaper"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_papers" />
        <RadioButton
            android:id="@+id/ansPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_papers" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linear"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:baselineAligned="false"
        android:layout_below="@id/radioGroup">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtBranch"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0.0dip"
            android:layout_weight="1.0"
            android:layout_marginStart="2dp"
            android:layout_height="fill_parent"
            android:hint="@string/branch">

            <AutoCompleteTextView
                android:id="@+id/autoBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSemester"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0.0dip"
            android:layout_weight="1.0"
            android:layout_marginStart="2dp"
            android:layout_height="fill_parent"
            android:hint="@string/semester">

            <AutoCompleteTextView
                android:id="@+id/autoSemester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtYear"
        android:layout_below="@id/linear"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:hint="@string/paper_year">

        <AutoCompleteTextView
            android:id="@+id/autoYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_navigate_next_24"
        android:layout_below="@id/txtYear"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true" />


</RelativeLayout>